--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -4,7 +4,6 @@ import Icon from '../AstroIcon.astro';
 import { NavigationDropdown } from '../NavigationDropdown';
 import { RoadmapDropdownMenu } from '../RoadmapDropdownMenu/RoadmapDropdownMenu';
 import { AccountDropdown } from './AccountDropdown';
-import { CourseAnnouncement } from '../SQLCourse/CourseAnnouncement';
 ---
 
 <div class='bg-slate-900 py-5 text-white sm:py-8'>
@@ -18,26 +17,15 @@ import { CourseAnnouncement } from '../SQLCourse/CourseAnnouncement';
         <Icon icon='logo' />
       </a>
 
+      <div class='hidden gap-6 sm:flex sm:items-center'>
+        <NavigationDropdown client:load />
+      </div>
       <a
         href='/ai'
-        class='group relative inline text-gray-400 hover:text-white sm:hidden'
+        class='group relative inline text-gray-400 hover:text-white'
       >
         AI Tutor
-      </a>
-
-      <!-- Desktop navigation items -->
-      <div class='hidden gap-5 sm:flex sm:items-center'>
-        <NavigationDropdown client:load />
-        <a href='/get-started' class='text-gray-400 hover:text-white'>
-          Start Here
-        </a>
-        <RoadmapDropdownMenu client:load />
-        <a
-          href='/ai'
-          class='group relative mr-3 text-blue-300 hover:text-white'
-        >
-          AI Tutor
-          <span class='absolute -right-[11px] top-0'>
+         <span class='absolute -right-[11px] top-0'>
             <span class='relative flex h-2 w-2'>
               <span
                 class='absolute inline-flex h-full w-full animate-ping rounded-full bg-sky-400 opacity-75'
@@ -46,14 +34,9 @@ import { CourseAnnouncement } from '../SQLCourse/CourseAnnouncement';
               ></span>
             </span>
           </span>
-        </a>
-        <a
-          href='/teams'
-          class='group relative hidden text-gray-400 hover:text-white xl:block'
-        >
-          Teams
-        </a>
-      </div>
+      </a>
+
+      <!-- Desktop navigation items -->
     </div>
 
     <ul class='hidden h-8 w-[172px] items-center justify-end gap-5 sm:flex'>
