--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 @import 'tailwindcss';
-@import '@roadmapsh/editor/style.css';
 
 @config '../../tailwind.config.cjs';
 
@@ -38,11 +37,11 @@
 }
 
 @utility container {
-  @apply mx-auto max-w-[830px]! px-4;
+  @apply mx-auto w-full max-w-5xl px-4;
 }
 
 @utility container-lg {
-  @apply mx-auto max-w-[968px]! px-4;
+  @apply mx-auto w-full max-w-6xl px-4;
 }
 
 @utility badge {
